# One_Smart_Trade

./: .gitignore  LICENSE  METRICS_FIX_SUMMARY.md  Makefile  POPULATE_AND_VERIFY.md  POPULATE_DATABASE.md  QUICKSTART.md  README.md  START_BACKEND.md  START_BOTH.md  VERIFY_SETUP.md  check-backend.ps1  pnpm-lock.yaml
backend/: .env.example  .gitignore  README.md  VERIFY_BACKEND.md  alembic.ini  diagnostics.csv  pyproject.toml  run-backend.ps1  start-backend-simple.ps1  start-dev.ps1  start-dev.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_analysis_column.py  003_add_signal_breakdown_column.py  004_add_spot_metadata_to_recommendations.py  005_prevent_duplicate_recommendations.py  006_add_trade_state_to_recommendations.py  007_add_champion_versioning.py  008_add_recommendation_traceability_and_exports.py  009_add_user_risk_state.py  010_add_cooldown_system.py  011_add_leverage_tracking.py  012_add_knowledge_base.py  013_add_performance_periodic.py  014_add_signal_outcomes_table.py  015_add_confidence_calibrated.py  016_add_ensemble_weights.py  017_add_exposure_ledger.py  018_add_exported_by_to_exports_audit.py  019_add_risk_audit.py  020_add_knowledge_engagement.py  021_add_ingestion_timestamp_to_recommendations.py  022_add_seed_to_recommendations.py  023_add_config_version_to_recommendations.py  024_add_run_id_to_run_logs.py  025_add_backtest_run_id_to_recommendations.py  026_add_backtest_metrics_to_recommendations.py  027_add_tracking_error_bps_to_recommendations.py
backend/app/: __init__.py  main.py
backend/app/analytics/: __init__.py  livelihood_report.py  periodic_metrics.py  ruin.py  trade_efficiency.py
backend/app/backtesting/: __init__.py  advanced_metrics.py  auto_shutdown.py  champion.py  daily_strategy_adapter.py  engine.py  execution.py  execution_metrics.py  execution_simulator.py  guardrails.py  metrics.py  monitoring.py  objectives.py  observability.py  operational_flow.py  optimizer.py  order_types.py  (+22 more)
backend/config/: ensemble.yaml  performance.yaml
backend/scripts/: populate_and_verify.py  populate_database.py  test_binance_metrics.py  test_preflight_resilience.py  validate_backend_startup.py  validate_fixes.py  verify_endpoints.py
backend/tests/: test_binance_client.py  test_binance_client_metrics.py  test_ingestion.py  test_main.py  test_seeding_utils.py
(+323 files in other folders)
